XMLtoCSV/objects/unpackaged/objects/PCYC_Medical_Inquiry_Response__c.object
<CustomObject>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>125</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Fulfillment_Status__c</fullName>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Fulfilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MIR_Creator_Email_Workflow__c</fullName>
        <description>ES 8/9/2013: This field is not displayed to users; created for workflow for email alert to MIR&apos;s creator. When MIR is created, it populates this field. Then workflow is triggered to populate the MIR Creator Email field with this value.</description>
        <formula>PCYC_Medical_Inquiry__r.CreatedBy.Email</formula>
        <label>MIR Creator Email Workflow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MIR_Creator_Email__c</fullName>
        <description>ES 8/9/2013: This field is not visible to users; created for workflow to trigger email alert to MIR creator when it has been fulfilled. Another workflow will stamp this with value from MIR Creator Email Workflow field.</description>
        <label>MIR Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Status__c</fullName>
        <label>MSL Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Fulfilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MedInfo_CC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MedInfo CC Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Medical_Inquiry__c</fullName>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiry Responses</relationshipLabel>
        <relationshipName>Medical_Inquiry_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Medical Inquiry Response</label>
    <listViews>
        <fullName>All_Medical_Inquiry_Responses</fullName>
        <columns>OBJECT_ID</columns>
        <columns>PCYC_Medical_Inquiry__c</columns>
        <columns>PCYC_Fulfillment_Status__c</columns>
        <columns>PCYC_MSL_Status__c</columns>
        <columns>PCYC_MedInfo_CC_Completed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Medical Inquiry Responses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Medical_Inquiry_Responses</fullName>
        <columns>OBJECT_ID</columns>
        <columns>PCYC_MSL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Medical Inquiry Responses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MIR-{0000000}</displayFormat>
        <label>Medical Inquiry Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiry Responses</pluralLabel>
    <recordTypes>
        <fullName>MIR</fullName>
        <active>true</active>
        <description>Medical Inquiry Response</description>
        <label>MIR</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCYC_MIR_Completed</fullName>
        <active>true</active>
        <label>MIR - Completed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>